Canvas on Linux

--- a/src/utils/display/CMakeLists.txt
+++ b/src/utils/display/CMakeLists.txt
@@ -7,8 +7,8 @@ set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 add_library(SimpleWindow STATIC
-	"window.cpp"
-	"window.hpp"
+	"canvas.cpp"
+	"canvas.hpp"
 )
 
 target_include_directories(SimpleWindow PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
@@ -16,5 +16,5 @@ target_include_directories(SimpleWindow PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 if (WIN32)
 	target_link_libraries(SimpleWindow PUBLIC user32 gdi32)
 else()
-	
+	target_link_libraries(SimpleWindow PUBLIC X11)
 endif()
