--- a/demo/compression/CMakeLists.txt
+++ b/demo/compression/CMakeLists.txt
@@ -3,7 +3,7 @@ set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 if (NOT DEFINED CMAKE_CUDA_ARCHITECTURES)
-	set(CMAKE_CUDA_ARCHITECTURES 52)
+	set(CMAKE_CUDA_ARCHITECTURES 75)
 endif()
 
 if(NOT DEFINED CMAKE_CUDA_COMPILER OR NOT EXISTS ${CMAKE_CUDA_COMPILER})
@@ -18,6 +18,8 @@ if (ENABLE_CUDA)
 else()
 	project("compression_demo" LANGUAGES CXX)
 endif()
+
+set(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS} -Xptxas -v")
 
 if (ENABLE_CUDA)
 	# Enable CUDA debugging if debug build
